tests/programs/bad_parens.stderr

SyntaxError: expected atom or ident
at programs/bad_parens.re:2:1