tests/programs/bad_parens.re
# used to output is just "2", is a syntax error now
(
    print(2)
),
print(3)